--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Run unit tests
       run: npm run test:unit
     - name: Display softuni username
-      run: echo "dimosoftuni"
+      run: echo "ZdravkoAsenov"
